Move native image metadata generator to own sourceset, refine build